change colors and fix small layout issues

--- a/main.css
+++ b/main.css
@@ -6,9 +6,9 @@
   --color-bg-alt: #1e1e1e;
   --color-text: #E0E0E0;
   --color-heading: #ffffff;
-  --color-primary: #850606;
-  --color-primary-hover: rgb(114, 5, 5);
-  --color-secondary: #FBC02D;
+  --color-primary: #bd0c0c;
+  --color-primary-hover: rgb(156, 0, 0);
+  --color-secondary: #f5b209;
   --color-border: #333333;
 
   /* Tipografia */
@@ -114,7 +114,7 @@ section {
   height: 100vh;
   background: url('img/hero_bg.png') no-repeat center center/cover;
   position: relative;
-  min-height: 1000px;
+  min-height: 600px;
 }
 
 .hero__content {
@@ -141,8 +141,8 @@ section {
   font-size: 4rem;
   text-transform: uppercase;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
-  color: white;
   text-align: center;
+  color: #fff;
 }
 
 .hero__subtitle {
@@ -173,7 +173,7 @@ section {
 }
 
 .about {
-  background-color: white;
+  background-color: var(--color-heading);
   color: var(--color-bg)
 }
 
@@ -250,7 +250,7 @@ section {
 }
 
 .faq__content__title {
-  color: white;
+  color: var(--color-heading);
   font-weight: bold;
   width: 100%;
   padding: 20px;
@@ -263,13 +263,13 @@ section {
 }
 
 .price {
-  background-color: #850606;
+  background-color: var(--color-primary-hover);
   text-align: center;
 }
 
 .price__button {
   background-color: var(--color-secondary);
-  color: white;
+  color: var(--font-heading);
   text-shadow: rgba(0, 0, 0, 0.8) 1px 1px 2px;
   font-size: 24px;
   padding: 20px 40px;
@@ -284,11 +284,11 @@ section {
 }
 
 .price__button:hover {
-  background-color: #ffd365;
+  background-color: #e0ac32;
 }
 
 .price__content {
-  color: white;
+  color: var(--font-heading);
 }
 
 .personal {
@@ -317,14 +317,6 @@ section {
 
 .personal__cref {
   color: var(--color-primary);
-}
-
-.personal__instagram {
-  font-size: 20px;
-  font-weight: normal;
-  font-family: var(--font-body);
-  text-transform: lowercase;
-  color: white;
 }
 
 .personal__content__info {
@@ -363,11 +355,20 @@ section {
   .hero__content {
     padding: 0 10px;
   }
+
+  .hero__button, .price__button {
+    font-size: 1.5rem;
+    text-align: center;
+    padding: 10px 20px;
+  }
+
+  .hero__subtitle {
+    font-size: 1.1rem;
+    margin-bottom: 40px;
+  }
+
   .hero__title {
     font-size: 3rem;
-  }
-  .button {
-    padding: 10px 20px;
   }
 
   .price__main_text {
@@ -378,10 +379,6 @@ section {
 @media screen and (max-width: 520px) {
   .hero__title {
     font-size: 2.5rem;
-  }
-  .hero__button, .price__button {
-    font-size: 1.5rem;
-    text-align: center;
   }
 
   .responsive-break-line {
